--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "hello-world.c"
-                    INCLUDE_DIRS ".")
+idf_component_register(SRCS "dht.c" "main.c" "http.c" "logs.c" "wifi.c"
+                    INCLUDE_DIRS "."
+                    EMBED_FILES "index.html")
